[gd_scene load_steps=17 format=3 uid="uid://cvgh4nu88qj08"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_xo7up"]
[ext_resource type="Resource" uid="uid://dhwwanngxlypk" path="res://Enemies/Basic.tres" id="2_cnp6n"]
[ext_resource type="Shader" path="res://Scripts/FlashShader.gdshader" id="4_8ksv6"]
[ext_resource type="SpriteFrames" uid="uid://bdktrp2gatqus" path="res://Sprite Frames/FlyingEnemy.tres" id="5_fdv0p"]
[ext_resource type="Texture2D" uid="uid://m3vf5uw380ha" path="res://Sprites/SpawnThing.png" id="5_ijdgn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81ags"]
size = Vector2(14, 14)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gpc58"]
resource_local_to_scene = true
shader = ExtResource("4_8ksv6")
shader_parameter/flashColor = Color(1, 0.666667, 0.368627, 1)
shader_parameter/flashState = 0.0

[sub_resource type="Animation" id="Animation_3th5f"]
resource_name = "Die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_p37cd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpawnThing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpawnThing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:material:shader_parameter/flashState")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1n33i"]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpawnThing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.554785, 3.4822, 1),
"update": 0,
"values": [Vector2(1e-05, 20), Vector2(1, 20), Vector2(1e-05, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpawnThing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:material:shader_parameter/flashState")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_processing"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pdvqm"]
_data = {
"Die": SubResource("Animation_3th5f"),
"RESET": SubResource("Animation_p37cd"),
"Spawn": SubResource("Animation_1n33i")
}

[sub_resource type="Curve" id="Curve_r2jdr"]
max_value = 4.0
_data = [Vector2(0, 4), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_m117f"]
colors = PackedColorArray(0.133333, 0.133333, 0.133333, 1, 0.133333, 0.133333, 0.133333, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qncd6"]
gradient = SubResource("Gradient_m117f")
width = 10

[sub_resource type="Gradient" id="Gradient_uojwv"]
offsets = PackedFloat32Array(0.536313)
colors = PackedColorArray(1, 0.556863, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_l85ng"]
gradient = SubResource("Gradient_uojwv")
width = 10

[node name="Enemy" type="Area2D" groups=["Enemy"]]
collision_layer = 3
collision_mask = 3
monitoring = false
monitorable = false
script = ExtResource("1_xo7up")
enemy_type = ExtResource("2_cnp6n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_81ags")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_gpc58")
sprite_frames = ExtResource("5_fdv0p")
frame = 2
frame_progress = 0.813476

[node name="ShotTimer" type="Timer" parent="."]

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pdvqm")
}
autoplay = "Spawn"

[node name="SpawnThing" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(0, -153)
scale = Vector2(1e-05, 20)
texture = ExtResource("5_ijdgn")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 137.57
gravity = Vector2(0, 200)
initial_velocity_min = 50.0
initial_velocity_max = 70.0
scale_amount_curve = SubResource("Curve_r2jdr")
color = Color(1, 0.666667, 0.368627, 1)

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -7.0
offset_top = -8.0
offset_right = 3.0
offset_bottom = -7.0
scale = Vector2(1.4, 2)
max_value = 10.0
value = 5.0
texture_under = SubResource("GradientTexture1D_qncd6")
texture_progress = SubResource("GradientTexture1D_l85ng")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
